cert-manager-demo/07-deployment-mounting-tls-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - mountPath: /etc/nginx/ssl
            name: tls-certs
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
      volumes:
        - name: tls-certs
          secret:
            secretName: cert-letsencrypt-http-tls
