cert-manager-demo/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rancher-demo
  template:
    metadata:
      labels:
        app: rancher-demo
    spec:
      containers:
      - image: monachus/rancher-demo:latest
        name: rancher-demo
        ports:
        - containerPort: 8080
          name: web
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: rancher-demo
  ports:
    - name: web
      port: 80
      targetPort: web
