cert-manager-demo/02-ingress-selfsigned-cert.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo-selfsigned
  namespace: default
spec:
  rules:
  - host: demo-selfsigned.k8s-demo.plgrnd.be
    http:
      paths:
      - backend:
          serviceName: rancher-demo
          servicePort: 80
        path: /
  tls:
  - hosts:
    - demo-selfsigned.k8s-demo.plgrnd.be
    secretName: cert-selfsigned-tls
