cert-manager-demo/05-ingress-dns-cert.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-demo-dns
  namespace: default
spec:
  rules:
  - host: demo-dns.k8s-demo.plgrnd.be
    http:
      paths:
      - backend:
          serviceName: rancher-demo
          servicePort: 80
        path: /
  tls:
  - hosts:
    - demo-dns.k8s-demo.plgrnd.be
    secretName: cert-letsencrypt-dns-tls
